added the project file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             id="tab2"
             value="Male"
           />
-          <label for="tab2">Men</label>
+          <label for="tab2">Male</label>
           <!-- Tab 3 -->
           <input type="radio" name="tabset" id="tab3" value="Female" />
           <label for="tab3">Female</label>
@@ -374,7 +374,7 @@
       </div>
 
       <div class="foot">
-        <h5>© InstinctHub Techsavvy Limited &nbsp;<span id="copyrightYear">2022</span></h5>
+        <h5>© Ehapa Blessing &nbsp;<span id="copyrightYear">2022</span></h5>
         <script>document.getElementById("copyrightYear").innerHTML = new Date().getFullYear();</script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="assets/js/script.js"></script>
